# movie-stack

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CODEBASE_ORGANIZATION_SUMMARY.md  CODEBASE_STRUCTURE.md  DEVELOPMENT_GUIDELINES.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_FIXES_SUMMARY.md  ISSUES_AND_SOLUTIONS.md  Makefile  PHASE_13_ANALYTICS_MONITORING.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  docker.sh  env.example  env.template  nginx.conf  pyproject.toml  requirements.txt
app/: __init__.py  models.py  routes.py
backend/: env.example  package.json  requirements.txt  run.py  server.js
backend/app/: __init__.py  config.py  database.py
backend/app/api/: __init__.py  analytics.py  movies.py  recommendations.py  users.py
backend/app/config/: __init__.py
backend/app/exceptions/: __init__.py  authentication.py  base.py  external_api.py  not_found.py  validation.py
backend/app/infrastructure/: __init__.py  pagination.py
backend/app/middleware/: __init__.py  cors.py  logging.py  rate_limiting.py  security.py
backend/app/models/: __init__.py  movie.py  rating.py  user.py
backend/app/services/: __init__.py  recommendation_service.py  (+1 more)
backend/scripts/: init_db.py  migrate_db.py  seed_database.py  setup_env.py
backend/services/: tmdbService.js
backend/src/: app.js
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.yml  env.example  init.sql  nginx-frontend.conf  nginx.conf
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/nginx/: nginx.conf
docker/scripts/: docker-dev.sh
docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html  manifest.json  service-worker.js
frontend/src/: App.css  App.jsx  App.tsx  index.css  serviceWorker.ts  utils.js
infrastructure/docker/: Dockerfile.frontend  Dockerfile.frontend.simple  analytics_schema.sql  docker-compose.dev.yml  docker-compose.yml  nginx-frontend.conf
movie-stack-frontend/: package-lock.json
scripts/: dev.sh  dev_commands.py
(+179 files in other folders)
